--- a/internal/compiler/microservice/templates/message.go.tmpl
+++ b/internal/compiler/microservice/templates/message.go.tmpl
@@ -297,6 +297,7 @@ func (x *{{.Name}}) Encode(field *protolizer.Field, buffer *bytes.Buffer) error 
                         return err
                     }  
                     buffer.Write(data)
+                    return nil
                 {{- else }}
                     return fmt.Errorf("unsupported field type %T", key})
                 {{- end }}
@@ -484,7 +485,7 @@ func (x *{{.Name}}) Decode(field *protolizer.Field, buffer *bytes.Buffer) error 
                             bytes := protolizer.Alloc(0)
                             var value {{$field.Type}}
                             bytes.Write(data)
-                            err = protolizer.FastUnmarshal(&value, data)
+                            err = protolizer.FastUnmarshal(value, data)
                             protolizer.Dealloc(bytes)
                             if err != nil {
                                 return nil
@@ -597,12 +598,12 @@ func (x *{{.Name}}) Decode(field *protolizer.Field, buffer *bytes.Buffer) error 
                                 return err
                             }  
                         {{- else if or eq $field.Value eq 25}}
-                            data, err := protolizer.BytesDecode(field, buffer)
+                            data, err := protolizer.BytesDecode(buffer)
                             if err != nil {
                                 return err
                             }
                             var value {{$field.Type}}
-                            err = protolizer.FastUnmarshal(&value, data)
+                            err = protolizer.FastUnmarshal(value, data)
                             if err != nil {
                                 return err
                             }  
@@ -625,7 +626,7 @@ func (x *{{.Name}}) Decode(field *protolizer.Field, buffer *bytes.Buffer) error 
                     if err != nil {
                         return err
                     }
-                    err = protolizer.FastUnmarshal(&value, bytes)
+                    err = protolizer.FastUnmarshal(value, bytes)
                      if err != nil {
                         return err
                     }     
