--- a/internal/compiler/microservice/templates/message.go.tmpl
+++ b/internal/compiler/microservice/templates/message.go.tmpl
@@ -622,7 +622,7 @@ func (x *{{.Name}}) Decode(field *protolizer.Field, buffer *bytes.Buffer) error 
                     return nil
                 {{- else if eq $field.Kind 25}}
                     var value {{$field.Type}}
-                    bytes, err := protolizer.DecodeBytes(field, buffer)
+                    bytes, err := protolizer.BytesDecode(buffer)
                     if err != nil {
                         return err
                     }
